--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>   
 <body>
     <h1 id="title">Survey Form</h1>
-        <p id=discription><em>Thank you for participating in this brief survey regarding my "Tribute Page" project. It helps me to improve the website to better.</em></p>
+        <p id=description><em>Thank you for participating in this brief survey regarding my "Tribute Page" project. It helps me to improve the website to better.</em></p>
     <form id="survey-form">
         <fieldset>
             <legend>Personal</legend>
