--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                     <label id="name-label" for="name">Name: </label>
                 </div>
                 <div>
-                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                    <input type="text" name="name" id="name" required placeholder="Enter your name">
                 </div>
                 <div class="label">
                     <label id="email-label" for="email">Email: </label>
                 </div>
                 <div>
-                    <input type="text" name="email" id="email"  required placeholder="Enter your email">
+                    <input type="email" name="email" id="email"  required placeholder="Enter your email">
                 </div>
                 <div class="label">
                     <label id="number-label" for="age">Age: </label>
